--- a/Biodata.html
+++ b/Biodata.html
@@ -1,12 +1,23 @@
 <html>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Biodata</title>
+</head>
+
 <body>
     <h1>Sania Auliyana</h1>
-    <img src="https://i.pinimg.com/564x/99/24/d1/9924d1e9f7279d641148b4fec4c6b004.jpg" alt="danielle" width="128">
+    <img src="IMG_20201109_113322.jpg" alt="danielle" width="128">
     <h2>Tentang Saya</h2>
-    <p class="justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p class="justify">Saya memilih jurusan Sistem Informasi karena melihat bahwa lapangan kerja dan peluang karier di
+        bidang ini sangat besar.
+        Sejak menggeluti dunia Sistem Informasi, saya menjadi lebih lebih paham tentang teknologi dari pada sebelumnya.
+        Saya seorang yang kreatif dan suka mencari alternatif solusi dari berbagai macam persoalan.
+        Saya juga bersikap terbuka terhadap semua kemungkinan solusi yang ada.
+        Kreativitas sangat membantu saya untuk menjadi pemimpin yang baik karena saya bisa mengantisipasi berbagai
+        persoalan.</p>
     <h2>Keahlian Saya</h2>
     <ol>
         <li>Figma</li>
@@ -26,4 +37,5 @@
     <a>|</a>
     <a href="https://www.youtube.com/channel/UCkhyX1osMng8Hh6ajHZaznQ/featured">You Tube</a>
 </body>
+
 </html>
