--- a/Biodata.html
+++ b/Biodata.html
@@ -36,6 +36,8 @@
     <a href="https://www.facebook.com/saniya.auliana/">Facebook</a>
     <a>|</a>
     <a href="https://www.youtube.com/channel/UCkhyX1osMng8Hh6ajHZaznQ/featured">You Tube</a>
+    <a>|</a>
+    <a href="http://127.0.0.1:3000/portofolio.html">Portofolio</a>
 </body>
 
 </html>
