--- a/portofolio.html
+++ b/portofolio.html
@@ -5,25 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portofolio</title>
+    <link rel="stylesheet" href="./portofolio.css">
 </head>
-<style>
-    .center {
-        margin:auto;
-        width: 50%;
-        padding: 5px;
-    }
-</style>
 
 <body>
     <div class="center">
-        <h1 style="text-align:center;">Tabel Data Capaian yang Unggul dan Membanggakan</h1>
+        <h1>Tabel Data Capaian yang Unggul dan Membanggakan</h1>
         <p>Nama : <input type="text" name="nama" placeholder="Sania Auliyana Diatri" padding="10"></p>
         <p>Kelompok : <input type="text" name="kelompok" placeholder="Banyuwangi-Jember 1"></p>
     </div>
     <br>
     <div class="center">
-        <table border="1" cellpadding="10" style="justify-content:center;">
+        <table cellpadding="10">
             <tr>
                 <th> No </th>
                 <th> Kegiatan</th>
@@ -62,6 +56,9 @@
                 <td>Nasional</td>
             </tr>
         </table>
+        <a href="./Biodata.html">
+            <button>Biodata</button>
+        </a> 
     </div>
 
 </body>
