--- a/portofolio.html
+++ b/portofolio.html
@@ -17,7 +17,7 @@
         </ul>
     </div>   
     <div class="center">
-        <h1>Tabel Data Capaian yang Unggul dan Membanggakan</h1>
+        <h1>PORTOFOLIO</h1>
         <p>Nama : <input type="text" name="nama" placeholder="Sania Auliyana Diatri" padding="10"></p>
         <p>Kelompok : <input type="text" name="kelompok" placeholder="Banyuwangi-Jember 1"></p>
     </div>
