--- a/index.html
+++ b/index.html
@@ -5,8 +5,69 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .kotak{
+            background-color: black;
+            opacity: calc(60%);
+            padding:20px;
+            width:400px;
+            margin:20px auto;          
+
+        }
+        body{
+            background-image: url(https://images.pexels.com/photos/2017802/pexels-photo-2017802.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
+            background-repeat: no-repeat;
+            background-size: cover;
+            padding:20px;
+            width:400px;
+            margin:20px auto;    
+
+        }
+        h1,p,th,td{
+            color: azure;
+            margin: 10px;
+
+        }
+        table {
+            margin: 10px;
+            border: 1px;
+            border-color: aliceblue;
+            margin: 10px;
+        }
+    </style>
 </head>
+
 <body>
+    <div class="kotak">
+        <h1>Buku Tamu</h1>
+    <form action="">
+        <p>Cari data tamu :</p>
+        <input type="text" name="nama" placeholder="enter your name">
+    </form>
+    <table border ="1" cellpading ="10" >
+        <tr>
+            <th> Nama </th>
+            <th> Tanggal </th>
+            <th> Jenis Kamar </th>
+            <th> Harga </th>
+            <th> Detail </th>
+        </tr>
+        <tr>
+            <td>Andrew</td>
+            <td>12/01/2022</td>
+            <td>1</td>
+            <td>500.000</td>
+            <td><button>Lihat</button></td>
+        </tr>
+        <tr>
+            <td>Killa</td>
+            <td>12/01/2022</td>
+            <td>2</td>
+            <td>700.000</td>
+            <td><button>Lihat</button></td>
+        </tr>
+    </table>
+    </div>
     
 </body>
 </html>
